# mmlgui-mac

./: .gitignore  CMakeLists.txt  readme.md
assets/macos/: AppIcon.icns
scripts/: package_macos_dmg.sh
